<resources>
    <string name="app_name">Yapacaklarım</string>
    <string name="btn_confirm">ONAYLA</string>
    <string name="slct_time">Saat Seçin</string>
    <string name="slct_date">Tarih Seçin</string>
    <string name="txt_desc_task">Görev Açıklaması</string>
    <string name="txt_name_task">Görev Adı</string>
    <string name="screen_mode">EKRAN MODU</string>
    <string name="txt_language">DİL SEÇİN</string>
    <string name="txt_empy">Yapılacak görev yok. Eklemek için artı tuşuna basınız.</string>
    <string name="txt_delete">SİL</string>
    <string name="txt_delete_message">Item Silindi.</string>
    <string name="txt_menu_settings">Ayarlar</string>
    <string name="txt_menu_about">Hakkımızda</string>
    <string name="txt_error_message">Tüm alanları doldurun.</string>
    <string name="txt_search">Ara...</string>
    <string name="btn_edit">DEĞİŞTİR</string>
    <string name="btn_language">Türkçe</string>
    <string name="btn_positive">TAMAM</string>
    <string name="btn_negative">İPTAL</string>
    <string name="txt_title">Dili Değiştir</string>
    <string name="txt_about">Bu uygulama günlük yapacağınız görevlerin kaydının tutulması ve hatırlatılması için düzenlenmiştir.\n
    Created by Yasin Şenel\n
    Bizi Play Storeda oylayın!</string>
    <string name="btn_login">GİRİŞ</string>
    <string name="btn_register">KAYIT OL</string>
    <string name="txt_username">Kullanıcı Adı Girin</string>
    <string name="txt_email">E-Mail Girin</string>
    <string name="txt_password">Şifre Girin</string>
    <string name="txt_tblayout_login">Giriş</string>
    <string name="txt_tblayout_register">Kaydol</string>
    <string name="txt_wrong_password">Şifre Yanlış...</string>
    <string name="txt_registered_user">Kullanıcı Kayıtlı...</string>
    <string name="txt_logout">Çıkış Yap</string>
    <string name="txt_ob_title1">PLANLARINIZI KAYDEDİN</string>
    <string name="txt_ob_title2">KULLANICI DOSTU TASARIM</string>
    <string name="txt_ob_title3">HADİ BAŞLAYALIM !</string>
    <string name="txt_ob_desc1">Planlarınızı hatırlatılması için kaydedin.</string>
    <string name="txt_ob_desc2">Kullanıcı dostu tasarımla planlarınızı kolayca yönetin.</string>
    <string name="txt_ob_desc3">Uygulamayı deneyimlemek için başla!</string>
    <string name="btn_ob_start">BAŞLAYIN</string>
    <string name="txt_ob_skip">BİTİR</string>
    <string name="txt_fragment_settings">AYARLAR</string>
    <string name="txt_fragment_about">HAKKIMIZDA</string>
    <string name="txt_fragment_update">DEĞİŞTİR</string>
    <string name="txt_fragment_insert">EKLE</string>
</resources>